--- a/css/desc.css
+++ b/css/desc.css
@@ -275,19 +275,23 @@
     }
   
     #grande {
-      width: 250px;
-      margin-left: 100px;
+      width: 230px;
+      margin-left: 50px;
       margin-top: 100px;
      }
      
      .imgs {
        margin-top: 70px;
-       margin-left: 130%;
+       margin-left: 170%;
      }
      
      .produtoinfo {
-           margin-left: 90px;
+           margin-left: 10px;
            margin-top: 600px;
+     }
+
+     h1 {
+      font-size: 20px;
      }
   
      label #btn,label #cancel{
