--- a/css/sobre.css
+++ b/css/sobre.css
@@ -223,3 +223,80 @@ footer h1{
     color: white;
     font-weight: normal;
 }
+
+@media(max-width : 500px){
+
+    .imglogos{
+      display: flex;
+      text-align: right;
+      align-items: right;
+      margin-left: 300px;
+      margin-top: -70px;
+    }
+    
+    .imglogos img {
+      width: 20px;
+      margin-top: 0px;
+      padding: 10px;
+    }
+    
+      #logo {
+        width:70px;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+        margin-top: 25px;
+        margin-left: 160px;
+      }
+  
+      .title{
+        font-size: 25px;
+   margin-bottom: 30px;
+        margin-top: 60px;
+      }
+
+      .area-card{
+        flex-direction: column;
+      }
+
+      .card-1{
+        width: 270px;
+        height: 270px;
+        margin-bottom: 20px;
+      }
+  
+      .card-2{
+        width: 270px;
+        height: 270px;
+        margin-bottom: 20px;
+      }
+
+      .card-1 h1{
+        text-transform: uppercase;
+        font-size: 17px;
+      }
+    
+    .card-1 p{
+        font-size: 15px;
+    }
+
+    .card-2 h1{
+        text-transform: uppercase;
+        font-size: 17px;
+      }
+    
+    .card-2 p{
+        font-size: 15px;
+    }
+    
+    
+  
+  label #btn,label #cancel{
+      position: absolute;
+      left: 20px;
+      margin-top: -40px;
+    }
+
+    
+  
+  }
